src/objects/PowerLoader__Query_Parameter_Server_Filter__c.object
<CustomObject>
    <fields>
        <fullName>PowerLoader__Criteria_Value__c</fullName>
        <label>Criteria Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Criteria__c</fullName>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Begins With</fullName>
                </value>
                <value>
                    <fullName>Ends With</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Filter_Operation__c</fullName>
        <label>Filter Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>like</fullName>
                </value>
                <value>
                    <fullName>not like</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Filter_Type__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>SOQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Negate_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negate Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Query_Parameter__c</fullName>
        <label>Query Parameter</label>
        <referenceTo>PowerLoader__Query_Parameter__c</referenceTo>
        <relationshipLabel>Query Parameter Server Filters</relationshipLabel>
        <relationshipName>Query_Parameter_Server_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Query Parameter Server Filter</label>
    <nameField>
        <displayFormat>QPSF-{00000}</displayFormat>
        <label>Query Parameter Server Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Parameter Server Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PowerLoader__Criteria_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__Criteria__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>PowerLoader__Criteria__c</errorDisplayField>
        <errorMessage>Criteria is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__Filter_Type_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__Filter_Type__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>PowerLoader__Filter_Type__c</errorDisplayField>
        <errorMessage>Filter type is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__Filter_operation_is_required_for_Field</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__Filter_Operation__c, &apos;&apos;) &amp;&amp; ispickval(PowerLoader__Filter_Type__c, &apos;Field&apos;)</errorConditionFormula>
        <errorMessage>Filter Operation is required for Filter Type = Field</errorMessage>
    </validationRules>
</CustomObject>